refactor: cut the API down
